# rdf_framework

./: CMakeLists.txt  main.cxx
example/TKI/: CMakeLists.txt  genieTKI.cxx  nuwroTKI.cxx  nuwroTKI.json  tki_general.cxx
example/TKI/include/: tki_general.h
example/ganymede-reco/: general_define.cc  genie2event.cc
example/include/: tki_general.h
src/: analysis_steps.cxx
